<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Radio FM</string>
    <string name="fmapp">FM Radio for Android</string>
    <string name="stations">FM Radio Stations</string>
    <string name="lblversion">Version:</string>
    <string name="author">"Made by:

Pedro Veloso (@pedronveloso) for the FreeXperia Project
Layout concepts and art by Hairo The Blue Mage, dab512 and royale1223. 

Based upon the original work from Sony Ericsson Mobile Communications AB and Texas Instruments, Inc. 
Both their code and this project is sporting the Apache 2.0 License, you can find this project source at https://github.com/CyanogenMod/android_hardware_ti_fmradio"</string>
    <string name="app_rxtune">Enter Frequency</string>
    <string name="app_rxhelp">About</string>
    <string name="mono">Mono</string>
    <string name="pgmSrv">Program Service</string>
    <string name="statusMsg">Receiving…</string>
    <string name="statusMsgStopped">Press seek button to start playing.</string>
    <string name="notiMsg">Notification Message</string>
    <string name="btnBack">Back</string>
    <string name="japaneseBand">Japanese Band</string>
    <string name="preEmphasis">Pre Emphasis Filter(Usec):</string>
    <string name="radioData">Radio data(RDS)</string>
    <string name="advanced">Advanced</string>
    <string name="rdsTransmit">RDS Transmit:</string>
    <string name="sec50">50</string>
    <string name="sec75">75</string>
    <string name="none">None</string>
    <string name="PS">PS</string>
    <string name="PS:">PS:</string>
    <string name="RT">RT</string>
    <string name="RT:">RT:</string>
    <string name="TP">TP</string>
    <string name="TP:">TP:</string>
    <string name="stereo">Stereo</string>
    <string name="rdsAf">RDS AF</string>
    <string name="app_rds">FM Configurations</string>
    <string name="european">European</string>
    <string name="japanese">Japanese</string>
    <string name="freqRangeEurope">87.5 MHz - 108.0 MHz</string>
    <string name="freqRangeJapan">76 MHz - 90 MHz</string>
    <string name="label">KHz</string>
    <string name="labelhz">MHz</string>
    <string name="rx_freq_val">104.00</string>
    <string name="Manual">Manual</string>
    <string name="Configure">Configure</string>
    <string name="Help">Help</string>
    <string name="enterFreq_Dialog">Enter Frequency</string>
    <string name="empty" />
    <string name="pty">Dynamic PTY</string>
    <string name="comp">Compression</string>
    <string name="picode">PI Code:</string>
    <string name="speed">Speed:</string>
    <string name="size">Size:</string>
    <string name="rdsmode">Enable Rds</string>
    <string name="ptycode">PTY Code:</string>
    <string name="dicode">Dicodes:</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="att">Att</string>
    <string name="station1">1</string>
    <string name="station2">2</string>
    <string name="station3">3</string>
    <string name="station4">4</string>
    <string name="station5">5</string>
    <string name="station6">6</string>
    <string name="station">Station</string>
    <string name="configure_rds">Configure RDS</string>
    <string name="preferences">Preferences</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="preset">Preset</string>
    <string name="rdsaf">Set RDS AF</string>
    <string name="announcement">Announcement</string>
    <string name="TA">TA</string>
    <string name="connecting">Connecting…</string>
    <string name="seraching">Searching…</string>
    <string name="tuning">Tuning</string>
    <string name="notsupported">Not supported!!!!</string>
    <string name="setfreq">Set Frequency</string>
    <string name="wait">Please wait!!!!</string>
    <string name="startFm">Starting FM!!!!</string>
    <string name="volume">Volume :</string>
    <string name="rssi">RSSI :</string>
    <string name="band">Band :</string>
    <string name="mode">Mode :</string>
    <string name="deemphasis">DEmp Filter:</string>
    <string name="rdssystem">RDS System:</string>
    <string name="number">Enter a valid number</string>
    <string name="seeking">Seeking…</string>
    <string name="playing">Playing…</string>
    <string name="index">Index</string>
    <string name="freq">Freq</string>
    <string name="name" />
    <string name="channelSpace">Ch Space</string>
    <string name="confirm_action">Confirm action</string>
    <string name="rename">Rename</string>
    <string name="renameStation">Rename Station</string>
    <string name="renameStationQuestion">Rename Station?</string>
    <string name="setStation">Set Station</string>
    <string name="setStationQuestion">Set Station?</string>
    <string name="unsetStation">Unset Station</string>
    <string name="unsetStationQuestion">Unset Station?</string>
    <string name="cannot_enable_radio">Cannot enable Radio!!!!</string>
    <string name="please_wait">Please wait…</string>
    <string name="powering_radio">Powering on Radio</string>
    <string name="not_able_to_tune">Not able to tune!!!!</string>
    <string name="not_able_enable_rds">Cannot enable RDS!!!!</string>
    <string name="not_able_disable_rds">Cannot disable RDS!!!!</string>
    <string name="not_able_to_set_mode">Not able to set mode!!!!</string>
    <string name="not_able_to_setband">Not able to set band!!!!</string>
    <string name="not_able_to_setmute">Not able to set mute!!!!</string>
    <string name="not_able_to_seek_up">Not able to seek up!!!!</string>
    <string name="not_able_to_seek_down">Not able to seek down!!!!</string>
    <string name="not_able_to_setband_to_value">Cannot setBand to selected Value!!!!</string>
    <string name="not_able_to_set_deemp_filter_to_value">Cannot set De-Emp Filter to selected Value!!!!</string>
    <string name="not_able_to_set_channel_spacing_to_value">Cannot setChannelSpacing to selected Value!!!!</string>
    <string name="not_able_to_set_rds_to_value">Cannot set RDS System to selected Value!!!!</string>
    <string name="not_able_to_set_rds_af_on">Cannot set RDS AF Mode ON!!!!</string>
    <string name="not_able_to_set_rssi_threshold">Not able to setRssiThreshold!!!!</string>
    <string name="error_in_fm_app">Error in FM Application</string>
    <string name="applying_new_config">Applying new Configuration</string>
    <string name="empty_text">(Empty)</string>
    <string name="choose_station_name">"What's this station called?"</string>
    <string name="add_station">Add New Station</string>
    <string name="operations">Operations</string>
    <string name="edit_station">Edit Station</string>
    <string name="remove_station">Remove Station</string>
    <string name="confirm_action_remove_station">Are you sure you want to remove this station:</string>
    <string name="earphones_not_plugged">Earphones not plugged-in. Please plug them in before starting this application.</string>
    <string name="valid_frequency">Enter a valid frequency!!</string>
    <string name="seek_up">Seek Up</string>
    <string name="seek_down">Seek Down</string>
    <string name="close_notification">Close Notification</string>
    <string name="general_preferences">General</string>
    <string name="pref_use_rds_instead_title">Notification PRESET</string>
    <string name="pref_use_rds_instead">Use PRESET name in Notification instead of RDS value</string>
    <string name="pref_notification_bar_title">Notifications</string>
    <string name="pref_notification_bar">Use notification bar controls</string>
    <string name="pref_print_debug_info_title">Debug Info</string>
    <string name="pref_print_debug_info">Print debug information to logcat (requires restart of app)</string>
</resources>
