<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_preferences">
        <CheckBoxPreference android:title="@string/pref_notification_bar_title" android:key="use_notification_bar" android:summary="@string/pref_notification_bar" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_use_rds_instead_title" android:key="rds_instead_preset" android:summary="@string/pref_use_rds_instead" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_print_debug_info_title" android:key="print_debug_info" android:summary="@string/pref_print_debug_info" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/about">
            <intent android:action="android.intent.action.START_RXHELP" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>