<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="#00000000" android:layout_width="480.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/list_key" android:layout_width="80.0dip" android:layout_height="40.0dip" android:text="@string/index" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/list_value" android:layout_width="80.0dip" android:layout_height="40.0dip" android:text="@string/freq" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/list_name" android:layout_width="140.0dip" android:layout_height="40.0dip" android:text="@string/name" />
</LinearLayout>