<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <CheckBox android:id="@id/chbRdsmode" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/rdsmode" style="@style/preferencesTextStyle" />
                <CheckBox android:id="@id/chbSetRdsAf" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:text="@string/rdsaf" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip">
                <TextView android:id="@id/txtRdsSystem" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/rdssystem" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <Spinner android:id="@id/spnRdsSystem" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget170" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:id="@id/txtBand" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/band" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <Spinner android:id="@id/spnBand" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:id="@id/txtMode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/mode" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <Spinner android:id="@id/spnMode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="15.0dip" android:text="@string/deemphasis" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <Spinner android:id="@id/spnEmp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget173" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:id="@id/txtChannelSpacing" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/channelSpace" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <Spinner android:id="@id/spnChannelSpace" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
            </LinearLayout>
            <LinearLayout android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:id="@id/txtRssi" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/rssi" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
                <EditText android:id="@id/Rssi" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/empty" android:layout_weight="1.0" android:inputType="numberDecimal" style="@style/preferencesTextStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:id="@id/btnOk" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@*android:string/ok" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
        <Button android:id="@id/btnCancel" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@*android:string/cancel" android:layout_weight="1.0" style="@style/preferencesTextStyle" />
    </LinearLayout>
</LinearLayout>