<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:paddingLeft="50.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:text="@string/fmapp" />
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="24.0sp" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/lblversion" />
        <TextView android:textSize="24.0sp" android:id="@id/txtversion" android:paddingLeft="30.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" />
    </LinearLayout>
    <TextView android:textSize="@dimen/small_font" android:gravity="center" android:autoLink="web" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author" />
</LinearLayout>